CSS touch up to prevent overflow on long term/def

--- a/css/create.css
+++ b/css/create.css
@@ -89,6 +89,7 @@ button {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 14px;
     color: #4b5a74;
+    overflow-wrap: break-word; /* break words to prevent overflow */
 }
 
 #data-table th {
@@ -107,8 +108,7 @@ button {
 #table-body {
     display: block;
     max-height: 500px;
-    overflow-y: auto;
-    /* Vertical scrolling when content exceeds max-height */
+    overflow-y: auto; /* Vertical scrolling when content exceeds max-height */
 }
 
 #data-table button {
