--- a/css/review.css
+++ b/css/review.css
@@ -74,6 +74,9 @@ h1 {
     position: absolute;
     top: 0;
     left: 0;
+    word-break: break-word; /* Words break onto a new line */
+    white-space: normal; /* Allows text to wrap to the next line */
+    padding: 10px;
 }
 
 .flashcard-back {
